@@ -1,5 +1,16 @@
 2010-10-15  Ivan Maidanski <ivmai@mail.ru>
 
+	* darwin_stop_world.c (GC_query_task_threads): Don't define to
+	false for DARWIN_DONT_PARSE_STACK case; unconditionally initialize
+	the variable to false (for now).
+	* darwin_stop_world.c (GC_push_all_stacks): Call task_threads()
+	only if not DARWIN_DONT_PARSE_STACK.
+	* darwin_stop_world.c (GC_stop_world, GC_start_world): Use the
+	approach based on task_threads() only if GC_query_task_threads
+	else use GC_threads table.
+
+2010-10-15  Ivan Maidanski <ivmai@mail.ru>
+
 	* darwin_stop_world.c (GC_mach_threads): Remove static qualifier.
 	* darwin_stop_world.c (GC_stop_init): Remove (as we do not need to
 	really clear GC_mach_threads[]).
